src/Home.css
/* ... */
        
        .callToActionNM:hover {
            background-color: white;
            color: #FFC857;
            border: 2px solid #FFC857;
            transform: scale(1.2);
            -webkit-box-shadow: 0px 0px 19px 2px #FFC857;
            box-shadow: 0px 0px 19px 2px #FFC857;
            -webkit-transition: .3s;
            -o-transition: .3s;
            -moz-transition: .3s;
            transition: .3s;
            background-color: #393D3F;
        }
        
        .myProfessionNM {
            text-transform: uppercase;
            font-style: italic;
            color: #FFC857;
            font-weight: bolder;
            -webkit-text-stroke-width: 1px;
            -webkit-text-stroke-color: #FFC857;
            font-size: 18px;
            margin-top: 15px;
            line-height: 30px;
        }
        
        .myProfessionDetailedNM {
            font-weight: bold;
            color: #ffffff;
            margin-top: 30px;
        }
        
        .profileImageNM {
            width: 220px;
            height: 220px;
            border-radius: 100%;
            background-image: url(../src/Shared/Media/memojiiAppleCris.png);
            background-position: center;
            background-repeat: no-repeat;
            /*border: 6px solid #468C9D;*/
            background-size: 230px 240px;
            background-color: #FFC857;
            -webkit-box-shadow: 0px 10px 19px 1px #FFC857;
            box-shadow: 0px 10px 19px 1px #FFC857;
        }
        
        .lightModeSwitchNM {
            height: 30px;
            background-color: #ffffff;
            width: 55px;
            border-radius: 20px;
            display: flex;
            align-items: center;
            cursor: pointer;
            position: absolute;
            top: 20px;
            right: 20px;
        }
        
        .moonSun {
            margin-left: 4px;
        }
        
        .majorMoonSunCircle {
            opacity: 100;
            fill: #F0D85A;
        }
        
        .majorMoonSunCircleNM {
            opacity: 100;
            fill: #393D3F;
        }
        
        .minorMoonSunCircle {
            opacity: 100;
            transition: .5s;
        }
        
        .minorMoonSunCircleNM {
            opacity: 0;
            transition: .5s;
        }
        
        .moon {
            opacity: 0;
            transition: .5s;
        }
        
        .moonNM {
            opacity: 100;
            transition: .5s;
            border: 1px solid #F0D85A;
        }
        /*SKILLS SECTION*/
        
        .skillsSection {
            width: 100%;
            height: auto;
            position: relative;
        }
        
        .skillsSectionNM {
            width: 100%;
            height: auto;
            position: relative;
            background-color: #393D3F;
        }
        
        .sectionTitle {
            position: relative;
            margin: auto;
            width: 85%;
            color: #2A90A9;
            user-select: none;
        }
        
        .sectionTitleNM {
            position: relative;
            margin: auto;
            width: 85%;
            color: #F0D85A;
            user-select: none;
        }
        
        .sectionTitle>p {
            text-align: left;
            font-size: 36px;
            font-weight: bold;
        }
        
        .sectionTitleNM>p {
            text-align: left;
            font-size: 36px;
            font-weight: bold;
        }
        
        .webProgramming {
            fill: #2a90a9;
            position: absolute;
            top: 10px;
            left: 60px;
        }
        
        .webProgrammingNM {
            fill: #F0D85A;
            position: absolute;
            top: 10px;
            left: 60px;
        }
        
        .skillsSectionContent>p {
            width: 85%;
            margin: auto;
            margin-top: 80px;
            text-align: start;
            color: #393D3F;
            font-weight: bold;
            font-size: 22px;
        }
        
        .skillsSectionContentNM>p {
            width: 85%;
            margin: auto;
            margin-top: 80px;
            text-align: start;
            color: white;
            font-weight: bold;
            font-size: 22px;
        }
        
        .skillContainer {
            display: grid;
            width: 85%;
            margin: 20px auto;
            grid-template-columns: 1fr 1fr 1fr;
            grid-auto-rows: 1fr;
            gap: 40px;
        }
        
        .skillItem {
            border-radius: 6px;
            padding: 10px 0;
            background-color: #e9e9e9;
            color: #2A90A9;
            font-weight: bold;
            max-width: 170px;
            user-select: none;
        }
        
        .skillItem:hover {
            background-color: #2A90A9;
            color: #ffffff;
            cursor: pointer;
            transition: .4s;
        }
        
        .skillItemNM {
            border-radius: 6px;
            padding: 10px 0;
            background-color: #555555;
            color: #F0D85A;
            font-weight: bold;
            max-width: 170px;
            user-select: none;
        }
        
        .skillItemNM:hover {
            background-color: #F0D85A;
            color: #555555;
            cursor: pointer;
            transition: .4s;
        }
        
        .circuitSvg {
            fill: #2A90A9;
            position: absolute;
            top: 720px;
            right: -95px;
        }
        
        .circuitSvgNM {
            fill: #F0D85A;
            position: absolute;
            top: 720px;
            right: -95px;
        }
        
        .myWorkSection {
            width: 100%;
            height: auto;
        }
        
        .myWorkSectionNM {
            width: 100%;
            height: auto;
            background-color: #393D3F;
        }
/* ... */

